--- a/source/sass/length.sass
+++ b/source/sass/length.sass
@@ -5,3 +5,101 @@
 	margin-top: 20px
 	width: 85%
 	background-color: $main-background-color
+	font-size: $main-content-font-size
+	color: white
+	border-radius: 5px
+
+
+
+
+
+//  Navbar Styling
+html, body
+	margin: 0px
+	padding: 0px
+.dropbtn
+	background-color: inherit
+	color: white
+	padding: 16px
+	// width: 20%
+	// height: 57px
+	font-size: 20px
+	border: none
+	font-weight: 700
+	// margin-top: 0px
+
+i.fa-angle-down
+	padding-left: 10px
+i.fa-home
+	padding-right: 10px
+.dropdown
+	position: relative
+	display: inline-block
+
+.dropdown-content
+	display: none
+	position: absolute
+	background-color: #f1f1f1
+	min-width: 160px
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2)
+	z-index: 1
+
+.dropdown-content a
+	color: black
+	padding: 12px 16px
+	text-decoration: none
+	display: block
+
+.dropdown-content a:hover
+	background-color: #ddd
+
+.dropdown:hover .dropdown-content
+	display: block
+
+.dropdown:hover .dropbtn
+	background-color: $main-hover-background
+	cursor: pointer
+	&:hover
+		background-color: $main-hover-background
+		cursor: pointer
+	&:active
+		outline-style: none
+		// font-size: 16px
+		transform: scale(0.9)
+		// box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2)
+		border-radius: 5px
+	&:focus
+		outline-style: none
+
+#header
+	background-color: rgb(255, 255, 255)
+	#heading
+		h1
+			margin: 0px auto 0px 0px
+			padding: 10px
+			font-size: $header-font-size
+			background-color: $main-background-color
+			color: white
+	#navbar
+		width: 100%
+		background-color: $secondary-background-color
+		.homelink
+			background-color: inherit
+			color: white
+			padding: 16px
+			// width: 150px
+			// height: 56px
+			font-size: 20px
+			border: none
+			margin-left: auto
+			margin-right: auto
+			font-weight: 600
+			&:hover
+				background-color: $main-hover-background
+				cursor: pointer
+			&:active
+				outline-style: none
+				transform: scale(0.9)
+				border-radius: 5px
+			&:focus
+				outline-style: none
