Converter Boxes First Setup

--- a/source/sass/3-modules/_variables.sass
+++ b/source/sass/3-modules/_variables.sass
@@ -5,3 +5,4 @@ $main-background-color: #ff5c33
 $main-content-font-size: 20px
 $content-heading-font-size: 35px
 $link-font-size: 21px
+$system-title-font-size: 25px
