--- a/source/sass/length.sass
+++ b/source/sass/length.sass
@@ -8,9 +8,17 @@
 	font-size: $main-content-font-size
 	color: white
 	border-radius: 5px
-
-
-
+	h3
+		font-size: $content-heading-font-size
+	#content
+		padding-top: 2px
+		padding-left: 30px
+		padding-bottom: 30px
+	h4
+		font-weight: 500
+		font-size: $system-title-font-size
+	h5
+		font-weight: 400
 
 
 //  Navbar Styling
