--- a/source/sass/length.sass
+++ b/source/sass/length.sass
@@ -25,31 +25,43 @@
 		margin-bottom: 8px
 	#convertersContainer
 		// line-height: 5
+	#metric
+		width: 99%
+		// border: 5px solid $main-hover-background
+		background-color: $secondary-background-color
+		border-radius: 10px
+		padding-bottom: 5px
+		height: 70%
+		margin-bottom: 20px
+		#systemTitle
+			margin-top: -10px
+			padding-top: 0.7px
+			padding-left: 10px
 	#metricConverters
 		margin-left: auto
 		margin-right: auto
 		display: grid
-		grid-template-columns: 25% 25% 25% 25%
+		grid-template-columns: 23% 23% 23% 23%
 		grid-column-gap: 5px
 		padding-right: 10px
+		padding-left: 10px
 		.unitbox
-			background-color: $secondary-background-color
+			background-color: $main-hover-background
 			border-radius: 10px
 			padding: 10px
 			input
 				width: 80%
 				heigth: 80%
 				font-size: 20px
+				border-radius: 5px
+				border: none
+				padding: 5px
+				&::placeholder
+					font-family: lato
 				&:focus
 					outline-style: none
 				&::-webkit-inner-spin-button, &::-webkit-outer-spin-button
 					-webkit-appearance: none
-		.lastItemOnRow
-			padding-right: 10spx
-
-
-
-
 
 
 
