Grid Column Attempt 1

--- a/source/sass/length.sass
+++ b/source/sass/length.sass
@@ -62,7 +62,9 @@
 					outline-style: none
 				&::-webkit-inner-spin-button, &::-webkit-outer-spin-button
 					-webkit-appearance: none
-
+@media only screen and (max-width: 980px)
+	#metricConverters
+		grid-template-columns: 48% 48%
 
 
 //  Navbar Styling
